result.txt
Checking file: BazaDeDate.h
/home/razvan/Desktop/AppPOO/BazaDeDate.h:1:6: warning: #pragma once in main file
    1 | ﻿#pragma once
      |      ^~~~
In file included from /home/razvan/Desktop/AppPOO/BazaDeDate.h:2:
/home/razvan/Desktop/AppPOO/IBazaDeDate.h:3:10: fatal error: windows.h: No such file or directory
    3 | #include <windows.h>
      |          ^~~~~~~~~~~
compilation terminated.
Syntax errors found in /home/razvan/Desktop/AppPOO/BazaDeDate.h. Check /home/razvan/Scripturi-de-verificare-teme-POO-C-/result.txt for details.
Checking file: ExceptionClass.h
/home/razvan/Desktop/AppPOO/ExceptionClass.h:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
Syntax is correct in /home/razvan/Desktop/AppPOO/ExceptionClass.h
Checking file: IBazaDeDate.h
/home/razvan/Desktop/AppPOO/IBazaDeDate.h:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
/home/razvan/Desktop/AppPOO/IBazaDeDate.h:3:10: fatal error: windows.h: No such file or directory
    3 | #include <windows.h>
      |          ^~~~~~~~~~~
compilation terminated.
Syntax errors found in /home/razvan/Desktop/AppPOO/IBazaDeDate.h. Check /home/razvan/Scripturi-de-verificare-teme-POO-C-/result.txt for details.
Checking file: IServerManagement.h
/home/razvan/Desktop/AppPOO/IServerManagement.h:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
Syntax is correct in /home/razvan/Desktop/AppPOO/IServerManagement.h
Checking file: IUtilizator.h
/home/razvan/Desktop/AppPOO/IUtilizator.h:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
/home/razvan/Desktop/AppPOO/IUtilizator.h:3:10: fatal error: windows.h: No such file or directory
    3 | #include <windows.h>
      |          ^~~~~~~~~~~
compilation terminated.
Syntax errors found in /home/razvan/Desktop/AppPOO/IUtilizator.h. Check /home/razvan/Scripturi-de-verificare-teme-POO-C-/result.txt for details.
Checking file: Logger.h
/home/razvan/Desktop/AppPOO/Logger.h:2:9: warning: #pragma once in main file
    2 | #pragma once
      |         ^~~~
/home/razvan/Desktop/AppPOO/Logger.h:11:5: error: ‘errno_t’ does not name a type; did you mean ‘error_t’?
   11 |     errno_t err;
      |     ^~~~~~~
      |     error_t
/home/razvan/Desktop/AppPOO/Logger.h: In constructor ‘Logger::Logger()’:
/home/razvan/Desktop/AppPOO/Logger.h:14:9: error: ‘err’ was not declared in this scope; did you mean ‘errno’?
   14 |         err = fopen_s(&pfile, "logger.txt", "a");
      |         ^~~
      |         errno
/home/razvan/Desktop/AppPOO/Logger.h:14:15: error: ‘fopen_s’ was not declared in this scope; did you mean ‘fopen64’?
   14 |         err = fopen_s(&pfile, "logger.txt", "a");
      |               ^~~~~~~
      |               fopen64
Syntax errors found in /home/razvan/Desktop/AppPOO/Logger.h. Check /home/razvan/Scripturi-de-verificare-teme-POO-C-/result.txt for details.
Checking file: md5.h
Syntax is correct in /home/razvan/Desktop/AppPOO/md5.h
Checking file: ServerManagement.h
/home/razvan/Desktop/AppPOO/ServerManagement.h:2:9: warning: #pragma once in main file
    2 | #pragma once
      |         ^~~~
In file included from /home/razvan/Desktop/AppPOO/Utilizator.h:2,
                 from /home/razvan/Desktop/AppPOO/ServerManagement.h:6:
/home/razvan/Desktop/AppPOO/IUtilizator.h:3:10: fatal error: windows.h: No such file or directory
    3 | #include <windows.h>
      |          ^~~~~~~~~~~
compilation terminated.
Syntax errors found in /home/razvan/Desktop/AppPOO/ServerManagement.h. Check /home/razvan/Scripturi-de-verificare-teme-POO-C-/result.txt for details.
Checking file: Utilizator.h
/home/razvan/Desktop/AppPOO/Utilizator.h:1:9: warning: #pragma once in main file
    1 | #pragma once
      |         ^~~~
In file included from /home/razvan/Desktop/AppPOO/Utilizator.h:2:
/home/razvan/Desktop/AppPOO/IUtilizator.h:3:10: fatal error: windows.h: No such file or directory
    3 | #include <windows.h>
      |          ^~~~~~~~~~~
compilation terminated.
Syntax errors found in /home/razvan/Desktop/AppPOO/Utilizator.h. Check /home/razvan/Scripturi-de-verificare-teme-POO-C-/result.txt for details.
